syntax = "proto3";

package interface.v1;

import "google/api/annotations.proto";
import "api/interface/v1/interface_data.proto";

option go_package = "./interfacePb";

// The greeting service definition.
service ConduitInterface {
  rpc Register (RegisterRequest) returns (UserReply) {
    option (google.api.http) = {
      post: "api/users",
      body: "*",
    };
  };
  rpc GetArticle (GetArticleRequest) returns (GetArticleReply)  {
    option (google.api.http) = {
      get: "api/articles/{slug}",
    };
  }
}

message GetArticleRequest {
  string slug = 1 [json_name = "slug"];
}

// The response message containing the greetings
message GetArticleReply {
  SingleArticle article = 3;
}


message RegisterRequest {
  message User {
    string username = 1;
    string email = 2;
    string password = 3;
  }
  User user = 1;
}

message UserReply {
  User user = 1;
}